# WeComBatchSender

./: .gitignore  AUTO_RELOAD_USAGE.md  BUILD_GUIDE.md  CHANGELOG.md  GIT_GUIDE.md  PACKAGING_CHECKLIST.md  PROJECT_CLEANUP.md  QQ_SCREENSHOT_GUIDE.md  QUICKSTART.md  README.md  TOTP_USAGE.md  app.py  auto_reload.py  build.bat  build_all.bat  contact_cleaner.py  init_git.bat  main.py  password_generator.py  password_generator_gui.py  pyproject.toml  requirements.txt  分享说明.txt  启动-自动重载.bat  生成验证码.bat  获取验证码.bat
wecom/core/: sender.py
wecom/gui/: app_window.py  password_generator_gui.py
wecom/utils/: __init__.py  contact_extractor.py  daily_password.py
